﻿===== Smarty 3.2-DEV  =====
04.03.2011
- moved code into classes it better belongs to
- prefix core functions called from compiled templates with '_'
- update PHPunit tests
- remove trailing ?> from Smarty source and format code

10.12.2011
- major change:
  * template variable values and its properties are stored as array in the template variable container
  * config variables are stored with prefix in template variable container
  
5.12.2011
- major change: template variable and its properties are no longer stored in Smarty_Variable objects but as
  as property of the variable container

2.12.2011
- change parsetree to free memory as early as possible
- set backtrack limit automatically to -1 when compiling to avoid problems with large template

1.12.2011
- add template namespace support for constant and function
- enable $merge_compiled_includes by default for maximum rendering speed

30.11.2011
- add new {import file=...} tag

27.11.2011
- update of exception messages
- make class Smarty_Template_Cached in file smarty_cacheresource.php loadable by autoloader
- optimization of templateExist()
- optimization of clearCompiledTemplate()
- optimization of clearCache() in file cache resource
- moved debug_print_var modifier into smarty_internal_debug.php that debugging can work with 
  $disable_core_plugins = true 

26.11.2011
- add runtime traceback to template {function}

25.11.2011
- enhancement make cache_modied_check work also with individually cached subtemplates (issue 46)

20.11.2011
- tweak remove unneeded ?><?php context switching from compiled templates

15.11.2011
- removed $use_reflection property as  reflection is now mandatory

12.11.2011
- use Reflection to check parameter when compiling modifier code

01.11.2011
- bugfix adjust displayed line numbers for SmartyCompilerException in {block} tags to be 
  absolute to start of source file

24.10.2011
- tweak performance replace strncmp with strpos (15% faster)